force-app/main/default/objects/WarehouseIn__c/WarehouseIn__c.object-meta.xml
<CustomObject>
    <label>대리점입고</label>
    <nameField>
        <label>Warehousing No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>