force-app/main/default/objects/WarehouseIn__c/fields/ConfirmAmount__c.field-meta.xml
<CustomField>
    <fullName>ConfirmAmount__c</fullName>
    <formula>ConfirmNetAmount__c +  ConfirmTaxAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirm Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>