force-app/main/default/objects/WarehouseIn__c/fields/ConfirmNetAmount__c.field-meta.xml
<CustomField>
    <fullName>ConfirmNetAmount__c</fullName>
    <label>Confirm Net Amount</label>
    <summarizedField>WarehouseInLineItem__c.ConfirmNetAmount__c</summarizedField>
    <summaryForeignKey>WarehouseInLineItem__c.WarehousingNo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>