force-app/main/default/objects/WarehouseIn__c/fields/ConfirmTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ConfirmTaxAmount__c</fullName>
    <label>Confirm Tax Amount</label>
    <summarizedField>WarehouseInLineItem__c.ConfirmTaxAmount__c</summarizedField>
    <summaryForeignKey>WarehouseInLineItem__c.WarehousingNo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>