force-app/main/default/objects/WarehouseIn__c/fields/ConfirmWarehouseIn__c.field-meta.xml
<CustomField>
    <fullName>ConfirmWarehouseIn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>본사 사용자</description>
    <label>Confirm Warehouse In</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WarehouseIn1</relationshipName>
    <type>Lookup</type>
</CustomField>