force-app/main/default/objects/WarehouseIn__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <description>배송일자와 입고일자가 다른 경우 고려</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>