force-app/main/default/objects/WarehouseIn__c/fields/InventoryOutOrder__c.field-meta.xml
<CustomField>
    <fullName>InventoryOutOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(출고:입고 1:1), 출고내용을 토대로 입고처리</description>
    <label>Inventory Out Order</label>
    <referenceTo>InventoryOutOrder__c</referenceTo>
    <relationshipName>WarehouseIn</relationshipName>
    <type>Lookup</type>
</CustomField>