force-app/main/default/objects/WarehouseIn__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <label>Net Amount</label>
    <summarizedField>WarehouseInLineItem__c.NetAmount__c</summarizedField>
    <summaryForeignKey>WarehouseInLineItem__c.WarehousingNo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>