force-app/main/default/objects/WarehouseIn__c/fields/Registor__c.field-meta.xml
<CustomField>
    <fullName>Registor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>입고등록한 대리점 직원</description>
    <label>Registor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Warehouse_In</relationshipName>
    <type>Lookup</type>
</CustomField>