force-app/main/default/objects/WarehouseIn__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <label>Tax Amount</label>
    <summarizedField>WarehouseInLineItem__c.TaxAmount__c</summarizedField>
    <summaryForeignKey>WarehouseInLineItem__c.WarehousingNo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>