force-app/main/default/objects/WarehouseIn__c/fields/WarehouseInDate__c.field-meta.xml
<CustomField>
    <fullName>WarehouseInDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Warehouse In Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>